Update Intro file with Cait's edits and reknit

--- a/Introduction to R.Rmd
+++ b/Introduction to R.Rmd
@@ -7,51 +7,60 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+setwd("~/ICMGP2019")
 ```
-# An Introduction to R
+# A Short Introduction to R
 ## Congratulations on deciding to use R!
 
-R is a really cool software package that provides a language and environment for statistical and mathematical computing.  It is an open source software (free!) that can be run on UNIX, Windows and iOS computers with generally the same syntax across all platforms.  If you want an example of the cool things you can do using R/RStudio, look no further than this html file.  It has been entirely generated using R/RStudio.  You can download R from http://www.r-project.org and the popular Graphical User Interface (GUI) RStudio at https://www.rstudio.com.  For the purposes of the ICMGP2019 workshop, please take the time to download **BOTH** R and RStudio.  We will be using RStudio for the workshop which requires you to also download and install R.
+R is a really cool software package that provides a coding language and environment for statistical and mathematical computing. It is open source software (free!) and can run on UNIX, Windows and iOS computers, with generally the same syntax across all platforms. We will be using R within the RStudio integrated development environment (IDE) for the ICMGP workshop. RStudio provides a popular graphical user interface (GUI) for interacting with the R language. If you want an example of the cool things you can do using these tools, look no further than this html file, which was generated using only R and RStudio! 
 
-This introduction is desgined to help you get started with the software package.  It will cover some very basic tasks that will come in handy during the workshop.  **Please take the time to go through this introduction before the workshop begins**
+For the purposes of the ICMGP2019 workshop, please take the time to **download and install BOTH R and RStudio before the workshop** on September 8. You can download R from http://www.r-project.org and R Studio at https://www.rstudio.com.
 
-## Lets get started!
+This introduction is designed to help you get started with the software package.  It will cover some very basic tasks that will come in handy during the workshop.  **Please take the time to go through this introduction before the workshop begins.**
+
+## Let's get started!
 
 Once you open RStudio, you will be presented with a screen similar to this:
 
 ```{r startup screen, out.width = 1920, out.height=1080, echo=F, fig.cap='Figure 1: This is what RStudio looks like when you start it up.'}
-knitr::include_graphics("C:/Users/gmill/Dropbox/Conference workshops/ICMGP2019/guide_images/startup_screen_1.png")
+knitr::include_graphics("guide_images/startup_screen_1.png")
 ```
+#FIXME: make this figure and others larger, can't read text "Console"
 
-You should see three (or four) panels depending on if you have used RStudio before.  On the left is the Console, which is the main computational window with the `r kableExtra::text_spec('>', color = 'blue')` underneath some R versioning information.  The console is where your commands tell R what to compute, but we do not want to work in this window.
+You should see three (or four) panels depending on whether you have used RStudio before. 
 
-In order to have a clear record of our work, we want to open a script.  We can do this with the keyboard shortcut ctrl+shift+N, or by clicking *File -> New File -> R Script.*  You should now have a new script window above your console
+On the left is the R console, which is the main computational window. On the upper right you can view items in your working environment, and below it browse through files in your working directory and on your computer. 
+
+The console will initially display some R versioning information and a little blue prompt that looks like this: `r kableExtra::text_spec(">", color = 'blue', font_size = 16, bold = T)`
+The console is where your commands tell R what to compute, and the prompt tells you that R is ready to recieve your code instructions.
+
+Usually we want to keep a saved record of our work, so instead of working directly in the console, we open a script and save our codework there. We can do this with the keyboard shortcut ctrl+shift+N, or by clicking `File -> New File -> R Script`.  You should now have a new script window above your console, in a *newly* opened 4th panel, that looks like this:
 
 ```{r example graphic 2, out.width = 1920, out.height=1080, echo=F, fig.cap='Figure 2: This is what you want RStudio to look like.'}
-knitr::include_graphics("C:/Users/gmill/Dropbox/Conference workshops/ICMGP2019/guide_images/startup_screen.png")
+knitr::include_graphics("guide_images/startup_screen.png")
 ```
 
-If you have used RStudio before, you might actually have started with some script windows already open.  The other two screens that RStudio presents contain helpful information as we code which I will explain as we go.  **Running the code in our script is very easy, simply click the line of code you want to run and press ctrl+enter (or press ctrl+enter when you finish typing a line of code).** This will transfer that line of script to the console and perform the designated function.
+(If you have used RStudio before, you may have started with some script windows already open.) **Running the code in our script is very easy, simply click the line of code you want to run and press ctrl+enter (or press ctrl+enter when you finish typing a line of code).** This will transfer that line of script to the console and perform the designated function.
 
 You may also want to "soft wrap" your code so that your script doesn't type off the side of the screen.  You can do that by clicking *Tools -> Global Options* and then in the Code table select the *soft wrap R Source files* box.
 
-```{r how to soft wrap, out.width = 1920, out.height=1080, echo=F, fig.cap='Figure 3: I find soft-wraping your code incredibly useful.'}
-knitr::include_graphics("C:/Users/gmill/Dropbox/Conference workshops/ICMGP2019/guide_images/softwrap_dialogue.png")
+```{r how to soft wrap, out.width = 1920, out.height=1080, echo=F, fig.cap='Figure 3: I find soft-wrapping my code incredibly useful.'}
+knitr::include_graphics("guide_images/softwrap_dialogue.png")
 ```
 
-The final thing we want to do before jumping into some code is to set the working directory.  The simplest way to do this is in the toolbar clicking *Session -> Set Working Directory -> Set Directory,* or by using the keyboard shortcut ctrl+shift+H and navigating to your desired directory (eg. C:/Users/gmill/Dropbox/Conference workshops/ICMGP2019/). Should then see in the console the command `r kableExtra::text_spec( setwd('C:/Users/gmill/Dropbox/Conference workshops/ICMGP2019/'), color='blue')`, which you can copy and paste into your script.
+The final thing we want to do before jumping into some code is to set the working directory. A very simple way to do this is to navigate to *Session -> Set Working Directory -> Set Directory*, or by using the keyboard shortcut `Ctrl+Shift+H` and navigating to your desired directory (eg.`C:/Users/gmill/Dropbox/Conference workshops/ICMGP2019/`). You should then see in the console the command `r kableExtra::text_spec("> setwd('C:/Users/gmill/Dropbox/Conference workshops/ICMGP2019/')", color='blue')`, which you can copy and paste into your script.
 
-## Lets Get Started!
+## Let's Get Started
 
-... with some terminology.  The types of data we will work with most often in RStudio are constants, vectors and data frames.  A constant is a variable set to a single number.  A vector is a "one dimensional" set of values or a collection of constants.  Similarly a data frame is a collection of vectors.
+... with some terminology. The types of data we will work with most often in RStudio are vectors and data frames. A vector is a "one-dimensional" set of values that are all of the same class. A vector can be as short as only one item, or it can be millions of items. Similarly, a data frame is a "two-dimensional" collection of vectors, where each.
 
-Lets start by making a constant.  
+Let's start by making a vector with only one value. Use the less-than symbol `<` and a minus sign `-` to form the two-character arrow `<-` that is the R assignment symbol. In a sentence, `x <- 3` means "make x equal to 3."
 
 ```{r}
 x <- 3
 ```
 
-Note that after we run this line of code `x` appears in our Environment (top right) with the value 3.
+Note that after we run this line of code, `x` appears in our Environment (top right tab) with the value 3.
 
 Now if we run:
 
@@ -60,7 +69,7 @@ x <- 5
 x
 ```
 
-we have reassigned the value of `x` and printed `x` in the console.  the `[1]` indicates that 5 is the first value of x.
+we have reassigned the value of `x` and printed `x` in the console.  The `[1]` indicates that 5 is the first value of vector x.
 
 Now we can do some basic math,
 
@@ -74,54 +83,60 @@ and we can assign that to a new variable.
 y <- x^3
 ```
 
-We could also put in a sequence of numbers or text.
+Try it out yourself!!
+
+
+We could also make a vector that contains a sequence of numbers or text. Note that the `#` symbol tells R that the following line is a comment, and not actually a line of code (very useful for documenting your work!!!)
 
 ```{r}
 # We can collect a group of numbers or characters
 i <- c(1, 3, 5, 7, 9, 11, 13, 15, 17, 19)
-l <- c('q', 'w', 'e', 'r', 't', 'y', 'u', 'i', 'o', 'p')
+k <- c('q', 'w', 'e', 'r', 't', 'y', 'u', 'i', 'o', 'p')
 
 # input a sequence of numbers
 j <- seq(2, 20, 2)
 
 # or a repeating set of factors
-k <- rep(c('left', 'right'), 5)
+m <- rep(c('left', 'right'), 5)
 ```
 
-If you notice, these three vectors all have a length of ten, while `x` has a length of one.  Additionally, `#` tells R that the following line is a comment, and not actually a line of code (very useful for documenting your work!!!)
+If you notice, all these vectors all have a length of ten, while `x` has a length of one.  
 
 ```{r}
 length(x)
 length(i)
 length(j)
 length(k)
+length(m)
 ```
 
-This means we can actually turn them into a dataframe!  The `str()` function gives us some additional information about the data frame
+Since all vectors `i`,`j`,`k`, and `m` are all the same length, we can actually combine them into a dataframe!  The `str()` function gives us some additional information about the data frame, and the `View()` function lets us look at the data frame as if it were a spreadsheet. 
 
 ```{r}
-df <- data.frame(i, j, k)
+df <- data.frame(i, j, k, m)
 df
 str(df)
+View(df)
 ```
 
-we can see that both `i` and `j` are numerical data and that `k` is a factor.
+We can see that both `i` and `j` are numerical data and that `k` is a factor.
 
 We can also create column names for the data, either as we make the dataframe or afterwards as a separate step.
 
 ```{r}
-df1 <- data.frame('odd'=i, 'even'=j, 'hand'=k, 'letters'=l)
+df1 <- data.frame('odd' = i, 'even' = j, 'hand' = m, 'letters' = k)
+str(df1)
 ```
 
 We can use those column names to specify the data we want to use, or use [], or a combination of the two
 
 ```{r}
-df1$odd # specifies the entire "odd" column
-df1[2,1] # specifies the second value of the first column
-df1$odd[2] # specifies the second value of the "odd" column
+df1$odd # specifies the entire "odd" column `df$column`
+df1[2,1] # specifies the second value `df[row, ]` of the first column `df[ ,column]`
+df1$odd[2] # specifies the second value of the "odd" column `df$column[row]`
 ```
 
-Notice that the last two accomplish the same thing.  They each return the second value of the *df1$odd*, or first column
+Notice that the last two accomplish the same thing.  They each return the second value of the *`df1$odd`*, or first column
 
 This notation comes in handy if your have a list of R objects.  Lists are a group of different objects and are really useful when you are generating some type of output (like a linear regression).  Lets create a list of R objects.
 
@@ -130,7 +145,8 @@ all <- list(a=df1, b=df, c=i, d=j, e=x)
 all
 ```
 
-*all* is now a list of five different objects.  We can call parts of the list, and even values within the list using the same types of notation we tried earlier.
+*`all`* is now a list of five different objects.  We can call parts of the list, and even values within the list using the same types of notation we tried earlier. 
+Notice, we can use the assigned names for each object on the list, and the numerical notation to grab the data of interest.
 
 ```{r}
 all$b
@@ -140,10 +156,9 @@ all$b[3,3]
 all[[2]][3,3]
 ```
 
-Notice, we can use the assigned names for each object on the list, and the numerical notation to grab the data of interest.
 
 ## Finally
 
-The final thing we need to do in preparation for the workshop, is download the datafolder we have made available for you on GitHub.  You can find it by navigating to github.com and searching for 'ICMGP2019.'
+The final thing we need to do in preparation for the workshop, is download the datafolder we have made available for you on GitHub.  You can find it by navigating to github.com and searching for 'ICMGP2019' or by clicking here: https://github.com/cgeger/ICMGP2019
 
-This should present you with a single hit for the repository 'cgeger/ICMGP2019.'  You can now click on the "clone or download" button, and download a .zip file.  Make sure you save this into an accessible directory and not just your downloads folder!  See you on a couple weeks!
+You can now click on the "clone or download" button, and download a .zip file.  Make sure you save this into an accessible directory and not just your downloads folder.  See you soon in Krakow!
